fix component Item alignment

--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,10 @@ button.selected {
 
 .component-item {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   border: 1px solid #000;
+  padding: 0 0.5rem;
   margin: 0 8px;
   height: 37px;
 }
